# py-consistent-formatter

./: README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
kfazi_yapf/: __main__.py
scripts/: version.py
tests/: test_formatter.py
