[build-system]
requires = [
    "hatchling==1.27.0",
    "GitPython==3.1.45",
]
build-backend = "hatchling.build"

[project]
name = "py-consistent-formatter"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Marek Antoniak" }
]
dependencies = [
    "yapf~=0.40",
    "isort~=8.0",
    "docformatter @ git+https://github.com/PyCQA/docformatter@d9ace1fdef5d2c164ee7284fa07a63f8ead48682",  # Use direct reference as there is no release that supports Python 3.14
    "tokenize_rt~=6.0",
]
dynamic = ["version"]

[tool.hatch.version]
source = "code"
path = "scripts/version.py"

[tool.hatch.metadata]
allow-direct-references = true  # Required by docformatter

[project.scripts]
py-consistent-formatter = "py_consistent_formatter.__main__:main"

[tool.hatch.envs.default]
dependencies = [
    "pytest==8.4.1",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github"
]

[tool.hatch.build.targets.wheel]
packages = [
    "py_consistent_formatter"
]
